--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ p {
 .title-section {
     border-radius: .5rem;
     width: 20rem;
-    height: 1rem;
+    height: 1.5rem;
     text-align: left;
-    justify-content: center;
+    align-content: center;
     padding: .5rem 0 .5rem 1rem;
     font-size: .7rem;
     margin-bottom: 2rem;
@@ -137,12 +137,38 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 46rem;
+    align-items: center;
+    width: 47rem;
+    height: 2rem;
+    margin-right: 2rem;
+    padding: .5rem 1rem .5rem 1.5rem;
+    font-size: .7rem;
+    border-radius: .5rem;
+}
+
+.recent-post-banner h3{
+    font-size: 1rem;
+}
+
+.recent-post-banner p{
+    font-size: .6rem;
+}
+
+.categories-banner {
+    width: 20rem;
+    font-size: .7rem;
+    height: 1rem;
+    padding: .7rem;
+    border-radius: .5rem;
 }
 
 .recent-post-banner p {
     text-decoration: underline;
     border-bottom: 5px;
+}
+
+.recent-cards {
+    display: grid;
 }
 
 .footer {
