--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ p {
 .text h4 {
     font-size: .8rem;
     font-weight: 400;
-
 }
 
 .container {
@@ -144,6 +143,7 @@ p {
     padding: .5rem 1rem .5rem 1.5rem;
     font-size: .7rem;
     border-radius: .5rem;
+    margin-bottom: .8rem;
 }
 
 .recent-post-banner h3{
@@ -167,9 +167,48 @@ p {
     border-bottom: 5px;
 }
 
+.recent-post-type {
+    color: rgba(2, 162, 143, 1);
+}
+
+.big-cards-text h3 {
+    margin: .6rem 0;
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+
+.recent-post-by {
+    color: rgba(97, 97, 97, 1);
+}
+
+.recent-post-fill {
+    margin: .5rem 0 1rem 0;
+}
+
 .recent-cards {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    font-size: .8rem;
+    width: 49.5rem;
 }
+
+.big-cards {
+    box-shadow: 0 .5rem .5rem 0 rgba(0, 0, 0, 0.1);
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+.big-cards img {
+    width: 100%;
+    height: 15rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+
+.big-cards-text {
+    margin: 1rem;
+}
+
 
 .footer {
     margin-top: 4rem;
