--- a/style.css
+++ b/style.css
@@ -6,8 +6,15 @@ html {
     font-size: 16px;
 }
 
+main {
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
 body {
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
@@ -71,11 +78,6 @@ p {
 .text h4 {
     font-size: .8rem;
     font-weight: 400;
-}
-
-.container {
-    margin-left: 7rem;
-    margin-right: 7rem;
 }
 
 .section-1 {
@@ -210,11 +212,15 @@ p {
 }
 
 
-.footer {
+.footer-container {
+    width: 100%;
+    height: 2rem;
     margin-top: 4rem;
-    text-align: center;
-    padding: .3rem;
-    font-size: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: .6rem;
 }
 
 
